--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "demo-app-1",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://aysunurterzi.github.io/frontend-case",
     "dependencies": {
         "@hookform/resolvers": "^5.1.1",
         "@testing-library/jest-dom": "^5.16.4",
@@ -26,7 +27,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -49,6 +52,7 @@
     "devDependencies": {
         "autoprefixer": "^10.4.14",
         "postcss": "^8.4.24",
-        "tailwindcss": "^3.3.2"
+        "tailwindcss": "^3.3.2",
+        "gh-pages": "^6.1.1"
     }
 }
