--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-    "name": "demo-app-1",
+    "name": "frontend-case",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://aysunurterzi.github.io/frontend-case",
     "dependencies": {
-        "@hookform/resolvers": "^5.1.1",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
-        "@types/lodash": "^4.17.19",
         "@types/node": "^16.11.56",
-        "@types/react": "^18.3.23",
-        "@types/react-dom": "^18.3.7",
-        "lodash": "^4.17.21",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-hook-form": "^7.58.1",
-        "react-router-dom": "^6.30.1",
+        "@types/react": "^18.0.17",
+        "@types/react-dom": "^18.0.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
-        "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4",
-        "zod": "^3.25.67"
+        "typescript": "^4.7.4",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
