--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         ]
     },
     "devDependencies": {
+        "@types/lodash": "^4.17.19",
         "autoprefixer": "^10.4.14",
         "gh-pages": "^6.3.0",
         "postcss": "^8.4.24",
