--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
         "@types/node": "^16.11.56",
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
+        "i18next": "^25.2.1",
+        "i18next-browser-languagedetector": "^8.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^15.5.3",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.7.4",
